force-app/main/default/objects/Standard_Discount_Guidelines__c/Standard_Discount_Guidelines__c.object-meta.xml
<CustomObject>
    <label>Fare Discount Guidelines</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fare Discount Guidelines</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>