force-app/main/default/objects/Standard_Discount_Guidelines__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enabled to display only the valid discount guidelines CRM 5363</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>