force-app/main/default/objects/Standard_Discount_Guidelines__c/fields/Discount_Threshold_DO__c.field-meta.xml
<CustomField>
    <fullName>Discount_Threshold_DO__c</fullName>
    <label>Discount Threshold (DO)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>