force-app/main/default/objects/Standard_Discount_Guidelines__c/fields/Fare_Discount_Guidelines_Unique_18_ID__c.field-meta.xml
<CustomField>
    <fullName>Fare_Discount_Guidelines_Unique_18_ID__c</fullName>
    <description>CRM-5511: To convert the 15 digit ID to 18 digit ID for data loader purpose.</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fare Discount Guidelines Unique ID</label>
    <type>Text</type>
</CustomField>