force-app/main/default/objects/Standard_Discount_Guidelines__c/fields/Fare_Structure__c.field-meta.xml
<CustomField>
    <fullName>Fare_Structure__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Booking Class</label>
    <referenceTo>Fare_Structure__c</referenceTo>
    <relationshipName>Standard_Discount_Guidelines</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>