force-app/main/default/objects/Standard_Discount_Guidelines__c/fields/Maximum_Forecast_QF_Share_Int_MCA__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Forecast_QF_Share_Int_MCA__c</fullName>
    <label>Maximum Forecast QF Share (Int&amp;MCA)</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>