force-app/main/default/objects/Standard_Discount_Guidelines__c/fields/Maximum_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Revenue__c</fullName>
    <label>Maximum Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>