force-app/main/default/objects/Standard_Discount_Guidelines__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fare_Structure__c</columns>
    <columns>Fare_Combination__c</columns>
    <columns>Minimum_Revenue__c</columns>
    <columns>Maximum_Revenue__c</columns>
    <columns>Discount_Threshold_AM__c</columns>
    <columns>Discount_Threshold_NAM__c</columns>
    <columns>Discount_Threshold_DO__c</columns>
    <columns>Segment__c</columns>
    <columns>Network__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>3/1/2024 12:00 AM</value>
    </filters>
    <filters>
        <field>Fare_Structure__c</field>
        <operation>equals</operation>
        <value>R</value>
    </filters>
    <label>All</label>
</ListView>