force-app/main/default/objects/Standard_Discount_Guidelines__c/listViews/International_Only.listView-meta.xml
<ListView>
    <fullName>International_Only</fullName>
    <columns>NAME</columns>
    <columns>Fare_Structure__c</columns>
    <columns>Fare_Combination__c</columns>
    <columns>Minimum_Revenue__c</columns>
    <columns>Maximum_Revenue__c</columns>
    <columns>Discount_Threshold_AM__c</columns>
    <columns>Discount_Threshold_DO__c</columns>
    <columns>Discount_Threshold_NAM__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Fare_Discount_Guidelines_Unique_18_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fare_Combination__c</field>
        <operation>equals</operation>
        <value>International</value>
    </filters>
    <filters>
        <field>Fare_Structure__c</field>
        <operation>equals</operation>
        <value>KMLVS</value>
    </filters>
    <label>International Only</label>
</ListView>