force-app/main/default/objects/Standard_Discount_Guidelines__c/listViews/Mainline_Red_eDeal_Q.listView-meta.xml
<ListView>
    <fullName>Mainline_Red_eDeal_Q</fullName>
    <columns>NAME</columns>
    <columns>Fare_Structure__c</columns>
    <columns>Segment__c</columns>
    <columns>Network__c</columns>
    <columns>Fare_Combination__c</columns>
    <columns>Minimum_Revenue__c</columns>
    <columns>Maximum_Revenue__c</columns>
    <columns>Discount_Threshold_AM__c</columns>
    <columns>Discount_Threshold_TL__c</columns>
    <columns>Discount_Threshold_NAM__c</columns>
    <columns>Discount_Threshold_DO__c</columns>
    <columns>Maximum_Forecast_QF_Share_Int_MCA__c</columns>
    <columns>Minimum_Forecast_QF_Share_Int_MCA__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fare_Combination__c</field>
        <operation>equals</operation>
        <value>Mainline - Red e-Deal + Q</value>
    </filters>
    <label>Mainline Red eDeal+Q</label>
</ListView>