force-app/main/default/objects/Standard_Discount_Guidelines__c/listViews/R_KMLVS.listView-meta.xml
<ListView>
    <fullName>R_KMLVS</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Fare_Structure__c</columns>
    <columns>Active__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Fare_Combination__c</columns>
    <columns>Segment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fare_Structure__c</field>
        <operation>equals</operation>
        <value>R</value>
    </filters>
    <filters>
        <field>Fare_Structure__c</field>
        <operation>equals</operation>
        <value>KMLVS</value>
    </filters>
    <label>R&amp;KMLVS</label>
</ListView>