force-app/main/default/objects/Standard_Discount_Guidelines__c/listViews/W_class_Emirates.listView-meta.xml
<ListView>
    <fullName>W_class_Emirates</fullName>
    <columns>NAME</columns>
    <columns>Fare_Structure__c</columns>
    <columns>Discount_Threshold_AM__c</columns>
    <columns>Discount_Threshold_DO__c</columns>
    <columns>Discount_Threshold_NAM__c</columns>
    <columns>Maximum_Revenue__c</columns>
    <columns>Minimum_Revenue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fare_Combination__c</field>
        <operation>equals</operation>
        <value>International</value>
    </filters>
    <filters>
        <field>Fare_Structure__c</field>
        <operation>equals</operation>
        <value>W</value>
    </filters>
    <label>W class Emirates</label>
</ListView>